--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
 
 #server settings
-server.port=8080
+server.port=${PORT:5000}
 
 #error
 server.error.whitelabel.enabled=false
