--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,8 @@ server.port=${PORT:5000}
 #error
 server.error.whitelabel.enabled=false
 server.error.path=/error
+
+#multipart files
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+
