--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.datasource.username=admin
 spring.datasource.password=admin123
 #data settings
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.open-in-view=false
 #console settings
-#spring.h2.console.enabled=true
+spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.h2.console.settings.trace=false
 spring.jpa.show-sql=true
