HOTFIX: last commit reverted, main class path changes
- GoogleAPIKey.java deleted
- Main class path changes in build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'java'
 }
 
-group = 'com.highschool'
+group = 'com.highschool.image.vote'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '15'
 targetCompatibility = '15'
@@ -42,7 +42,7 @@ dependencies {
 }
 
 springBoot {
-    mainClass = 'com.staszic.poll.ImageVoteApplication'
+    mainClass = 'com.highschool.image.vote.ImageVoteApplication'
 }
 
 test {
