--- a/application.yml
+++ b/application.yml
@@ -16,3 +16,7 @@ spring:
           google:
             clientId: ${GOOGLE_CLIENT_ID}
             clientSecret: ${GOOGLE_CLIENT_SECRET}
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
