Feature: new method for catching uploading errors for multipart files - handleFileUploadingError()

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,7 @@ server.port=${PORT:5000}
 server.error.whitelabel.enabled=false
 server.error.path=/error
 #multipart files
-spring.servlet.multipart.max-file-size=5MB
-spring.servlet.multipart.max-request-size=5MB
-
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=25MB
+spring.servlet.multipart.max-request-size=25MB
+spring.servlet.multipart.resolve-lazily=true
